# scitex-python

./: .coveragerc  .env.example  .env.zenrows  .flake8  .gitignore  .jupyter_ystore.db  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CIRCULAR_IMPORT_STATUS.md  CLAUDE.md  COMMIT_MESSAGE_RTD.txt  CONTRIBUTING.md  EFFECTIVENESS_REPORT.md  FINAL_SOLUTION.md  FULL_DOWNLOAD_LOG_colored.txt  INSTALLATION.md  LICENSE  MEMO.md  MIGRATION-STATUS.md  MISSION_ACCOMPLISHED.md  MM_CONTROL_IN_PLT.md  Makefile  NOTEBOOK_REPAIR_SUMMARY.md  OPENATHENS_FIXED_SUMMARY.md  PROJECT_STATUS.md  PYPI_RELEASE_CHECKLIST.md  README.md  REFACTORING.md  RELEASE_ANNOUNCEMENT.md  RTD_SETUP_STATUS.md  SCHOLAR_REFACTORING_SUMMARY.md  SciTeX-Code  TEST_FIX_PROGRESS_2025-06-14.md  TODO.md  TODO_.md  ZENROWS_QUICK_START.md  brunner_munzel_results.json  brunner_munzel_results.txt  brunner_munzel_results.xlsx  (+96 more)
.archive_scholar_20250724_142023/: CLEANUP_SUMMARY.md  cleanup_scholar_files.py  preview_cleanup.py
.claude/: mcp-config.json  next_actions_20250704.md  session_exit_20250704.md  settings.json
.dev/: OPENATHENS_SUCCESS_SUMMARY.md  README_REGRESSION_TESTING.md  add_lean_library_to_pdfdownloader.py  all_paper_urls.txt  all_papers_results.json  apply_integrated_resolver_to_pac.py  audit_and_cleanup_scholar.py  auth_debug_verbose.py  bot_detection_test_results.json  capture_failed_paper_screenshots.py  check_openathens_status.py  check_processing_status.py  chrome_extension_automation.py  chrome_extension_automation_summary.md  cleanup_duplicate_symlinks.py  cleanup_scholar.sh  complete_paper_storage.py  complete_pipeline_result.json  comprehensive_doi_resolution.py  comprehensive_feature_summary.md  config_update_summary.md  corpus_id_resolution_results.json  corpus_id_resolver.py  correct_structure_info.json  count_papers_debug.py  crawl4ai_pdf_extractor.py  create_comprehensive_csv_summary.py  create_csv_summary_fixed.py  create_download_helper.py  create_lookup_table.py  create_pdf_discovery_translator.py  debug_auth_timing.py  debug_bibtex_parsing.py  debug_browser_manager.py  debug_browser_with_puppeteer.py  debug_config_resolution.py  debug_crossref_source.py  debug_individual_resolver.py  debug_latex_conversion.py  debug_pdf_classification.py  (+158 more)
.dev_pac/: COMPLETION_SUMMARY.md  FINAL_REPORT.md  FINAL_SESSION_REPORT.md  PROJECT_COMPLETION_REPORT.md  authenticated_chrome_downloader.py  authenticated_pdf_downloader.py  auto_auth_downloader.py  auto_save_current_batch.py  auto_zotero_save.py  auto_zotero_save_simple.py  auto_zotero_with_overlay.py  batch_download_linux_zotero.py  batch_download_pac.py  batch_open_in_chrome.py  check_pdf_details.py  check_status.py  comprehensive_pac_downloader.py  configure_zotero_proxy.py  detailed_status_check.py  direct_crawl4ai_downloader.py  direct_pdf_download.py  download_next_batch.py  download_pac_pdfs.py  download_remaining_accessible.py  download_remaining_papers.py  download_with_ctrl_tab.py  download_with_proper_tabs.py  final_status.py  fixed_tab_navigation.py  generate_chrome_commands.py  generate_dashboard.py  generate_simple_dashboard.py  generate_standalone_dashboard.py  install_zotero.sh  install_zotero_deps.sh  interactive_tab_test.py  ipy_download_test.py  missing_pdfs_analysis.json  open_accessible_papers.py  open_all_missing.py  (+30 more)
.env.d.examples/: 00_crossref-local.env  00_figrecipe.env  00_scitex-writer.env  00_scitex.env  00_socialia.env  01_audio.env  01_cloud.env  01_config.env  01_logging.env  (+7 more)
mcp_servers/scitex-base/: __init__.py  pyproject.toml
mcp_servers/scitex-orchestrator/: __init__.py  pyproject.toml
mcp_servers/scitex-pd/: pyproject.toml
mcp_servers/scitex-project-validator/: README.md  pyproject.toml
mcp_servers/scitex-torch/: __init__.py  pyproject.toml
mcp_servers/scitex-validator/: pyproject.toml  server.py
pypi_files/: pyproject.toml  requirements.txt
redirect/: pyproject.toml
src/mcp_servers/scitex-analyzer/: README.md  __init__.py  advanced_analysis.py  constants.py  pyproject.toml  server.py
src/mcp_servers/scitex-analyzer/helpers/: __init__.py  debug_helpers.py  docstring_helpers.py  documentation.py  generation.py  import_utils.py  structure.py
src/mcp_servers/scitex-analyzer/tools/: __init__.py  advanced.py  core.py  documentation.py  generation.py  validation.py
src/mcp_servers/scitex-config/: __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex-developer/: README.md  __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex-dsp/: __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex-framework/: __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex-gen/: README.md  __init__.py  pyproject.toml  server.py  test_server.py  test_translations.py
src/mcp_servers/scitex-io/: README.md  __init__.py  educational_server.py  pyproject.toml  server.py
src/mcp_servers/scitex-io-translator/: README.md  pyproject.toml  server.py  test_translator.py
src/mcp_servers/scitex-io-translator/examples/: comprehensive_demo.py  multi_server_workflow.py
src/mcp_servers/scitex-io-translator/translators/: __init__.py  io_translator.py  path_translator.py  template_translator.py  validation_engine.py
src/mcp_servers/scitex-plt/: README.md  __init__.py  pyproject.toml  server.py  test_server.py
src/mcp_servers/scitex-scholar/: README.md  __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex-scholar/examples/: complete_workflow.py  download_with_crawl4ai.py
src/mcp_servers/scitex-stats/: README.md  __init__.py  pyproject.toml  server.py  test_server.py
src/mcp_servers/scitex_translators/: README.md  __init__.py  pyproject.toml  server.py
src/mcp_servers/scitex_translators/core/: __init__.py  base_translator.py  context_analyzer.py
src/mcp_servers/scitex_translators/modules/: __init__.py  ai_translator.py  gen_translator.py  io_translator.py  plt_translator.py
src/mcp_servers/scitex_translators/validators/: __init__.py  base_validator.py
src/scitex/scholar/_archived_pypi_files/: MANIFEST.in  PYPI_README.md  build_for_pypi.sh  pyproject.toml  requirements.txt
(+10726 files in other folders)
