# ============================================
# SciTeX: Python Framework for Scientific Research
# https://scitex.ai
# ============================================

# /home/ywatanabe/proj/scitex-code/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex"
version = "2.8.1"
description = "A comprehensive Python library for scientific computing and data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "scientific-computing",
    "data-analysis",
    "machine-learning",
    "signal-processing",
    "neural-networks",
    "research"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ============================================
# Core Dependencies (Minimal - Always Installed)
# ============================================
# Philosophy: Keep core minimal. Users install what they need with:
#   pip install scitex[module_name]
#   pip install scitex[audio,scholar]  # multiple modules
#   pip install scitex[all]            # everything
dependencies = [
    # Essential - required by most modules
    "numpy",
    "pandas",
    "PyYAML",
    "tqdm",
    "packaging",
    "natsort",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-code"
Documentation = "https://scitex.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-code"
"Bug Tracker" = "https://github.com/ywatanabe1989/scitex-code/issues"

[project.scripts]
scitex = "scitex.__main__:main"

# ============================================
# Module-Level Optional Dependencies
# ============================================
# Install: pip install scitex[module_name]
# Multiple: pip install scitex[audio,scholar,plt]
# All: pip install scitex[all]
# Auto-generated by: python scripts/generate_module_deps.py

[project.optional-dependencies]

# scitex.ai
ai = [
    "Pillow",
    "PyYAML",
    "anthropic",
    "groq",
    "imbalanced-learn",
    "joblib",
    "matplotlib",
    "natsort",
    "numpy",
    "openai",
    "optuna",
    "pandas",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "umap-learn",
]

# scitex.audio
audio = [
    "elevenlabs",
    "gTTS",
    "mcp",
    "pydub",
    "pyttsx3",
]

# scitex.benchmark
benchmark = [
    "numpy",
    "pandas",
    "psutil",
]

# scitex.browser
browser = [
    "aiohttp",
    "matplotlib",
    "playwright",
]

# scitex.capture
capture = [
    "Pillow",
    "mcp",
    "playwright",
]

# scitex.cli
cli = [
    "PyYAML",
    "click",
    "playwright",
    "requests",
]

# scitex.db
db = [
    "numpy",
    "pandas",
    "psycopg2-binary",
]

# scitex.dsp
dsp = [
    "matplotlib",
    "mne",
    "numpy",
    "pandas",
    "scipy",
    "sounddevice",
    "tensorpac",
    "torch",
    "torchaudio",
]

# scitex.fig
fig = [
    "Pillow",
    "PyQt5",
    "PyQt6",
    "dearpygui",
    "flask",
    "matplotlib",
    "numpy",
    "pandas",
]

# scitex.fts
fts = [
    "Pillow",
    "matplotlib",
    "numpy",
]

# scitex.gen
gen = [
    "h5py",
    "icecream",
    "ipykernel",
    "ipython",
    "matplotlib",
    "numpy",
    "pandas",
    "pyperclip",
    "requests",
    "scipy",
    "torch",
    "xarray",
]

# scitex.git
git = [
    "GitPython",
    "matplotlib",
]

# scitex.io
io = [
    "GitPython",
    "Pillow",
    "PyMuPDF",
    "PyPDF2",
    "PyYAML",
    "catboost",
    "h5py",
    "joblib",
    "matplotlib",
    "mne",
    "natsort",
    "numpy",
    "openpyxl",
    "optuna",
    "pandas",
    "pdfplumber",
    "piexif",
    "plotly",
    "pypdf",
    "python-docx",
    "qrcode",
    "ruamel.yaml",
    "scipy",
    "torch",
    "tqdm",
    "zarr",
]

# scitex.linalg
linalg = [
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
    "torch",
]

# scitex.msword
msword = [
    "python-docx",
]

# scitex.nn
nn = [
    "julius",
    "matplotlib",
    "numpy",
    "seaborn",
    "torch",
    "torchaudio",
]

# scitex.plt
plt = [
    "Pillow",
    "PyYAML",
    "matplotlib",
    "numpy",
    "pandas",
    "piexif",
    "scipy",
    "seaborn",
    "xarray",
]

# scitex.scholar
scholar = [
    "Pillow",
    "PyPDF2",
    "PyYAML",
    "aiohttp",
    "beautifulsoup4",
    "bibtexparser",
    "faiss-cpu",
    "fastmcp",
    "feedparser",
    "httpx",
    "impact-factor",
    "matplotlib",
    "nest-asyncio",
    "numpy",
    "openpyxl",
    "pandas",
    "playwright",
    "pydantic",
    "pyzotero",
    "requests",
    "scholarly",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "sqlalchemy",
    "tenacity",
    "tiktoken",
    "torch",
    "torchvision",
    "tqdm",
    "umap-learn",
    "watchdog",
]

# scitex.stats
stats = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "torch",
]

# scitex.torch
torch = [
    "torch",
]

# scitex.web
web = [
    "Pillow",
    "aiohttp",
    "beautifulsoup4",
    "matplotlib",
    "pandas",
    "requests",
    "tqdm",
]

# scitex.writer
writer = [
    "matplotlib",
]

# All module dependencies
all = [
    "GitPython",
    "Pillow",
    "PyMuPDF",
    "PyPDF2",
    "PyQt5",
    "PyQt6",
    "PyYAML",
    "aiohttp",
    "anthropic",
    "beautifulsoup4",
    "bibtexparser",
    "catboost",
    "click",
    "dearpygui",
    "elevenlabs",
    "faiss-cpu",
    "fastmcp",
    "feedparser",
    "flask",
    "gTTS",
    "groq",
    "h5py",
    "httpx",
    "icecream",
    "imbalanced-learn",
    "impact-factor",
    "ipykernel",
    "ipython",
    "joblib",
    "julius",
    "matplotlib",
    "mcp",
    "mne",
    "natsort",
    "nest-asyncio",
    "numpy",
    "openai",
    "openpyxl",
    "optuna",
    "pandas",
    "pdfplumber",
    "piexif",
    "playwright",
    "plotly",
    "psutil",
    "psycopg2-binary",
    "pydantic",
    "pydub",
    "pypdf",
    "pyperclip",
    "python-docx",
    "pyttsx3",
    "pyzotero",
    "qrcode",
    "requests",
    "ruamel.yaml",
    "scholarly",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "sounddevice",
    "sqlalchemy",
    "sympy",
    "tenacity",
    "tensorpac",
    "tiktoken",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "umap-learn",
    "watchdog",
    "xarray",
    "zarr",
]

# Development tools
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-mock",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
]

# ============================================
# Tool Configurations
# ============================================

[tool.hatch.version]
path = "src/scitex/__version__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["src"]  # Use local source instead of installed package
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-p", "no:warnings",
    "--ignore=tests/custom/old/",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmark tests",
    "filterwarnings: marks tests to filter specific warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/scitex"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.old/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/setup.py",
    "*/__main__.py",
    "*/versioneer.py",
    "*/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if __name__ == .__main__.",
    "pass",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "warnings.warn",
    "logger.debug",
    "logger.info",
]

[tool.coverage.paths]
source = [
    "src/scitex",
    "*/site-packages/scitex",
]

[tool.coverage.html]
directory = "tests/htmlcov"
title = "SciTeX Coverage Report"
skip_covered = false
skip_empty = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["scitex"]
known_third_party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/.old/*", "*/migrations/*", "*/__pycache__/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503", "E731", "E402"]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".tox",
    ".coverage",
    ".coveragerc",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:F401,F403,F811",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

# ============================================
# Ruff Configuration
# ============================================

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".old*",
    "migrations",
    "htmlcov",
    "docs/to_claude",
    "src/scitex/scholar/docs",
    "examples/*/docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # whitespace before ':'
    "E266",   # too many leading '#' for block comment
    "E501",   # line too long (handled by formatter)
    "E731",   # do not assign a lambda expression
    "E402",   # module level import not at top of file
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["scitex"]
known-third-party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"