# ============================================
# SciTeX: Python Framework for Scientific Research
# https://scitex.ai
# ============================================

# /home/ywatanabe/proj/scitex-code/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex"
version = "2.9.0"
description = "A comprehensive Python library for scientific computing and data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "scientific-computing",
    "data-analysis",
    "machine-learning",
    "signal-processing",
    "neural-networks",
    "research"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ============================================
# Core Dependencies (Minimal - Always Installed)
# ============================================
# Philosophy: Keep core minimal. Users install what they need with:
#   pip install scitex[modulename]
#   pip install scitex[audio,scholar]  # multiple modules
#   pip install scitex[all]            # everything
dependencies = [
    # Essential Scientific Computing
    "numpy",
    "pandas",
    # Essential Utilities
    "PyYAML",
    "tqdm",
    "packaging",
    "natsort",  # Natural sorting - used by many modules
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-code"
Documentation = "https://scitex.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-code"
"Bug Tracker" = "https://github.com/ywatanabe1989/scitex-code/issues"

[project.scripts]
scitex = "scitex.__main__:main"

# ============================================
# Optional Dependencies - Module-Oriented
# ============================================
# Install specific modules: pip install scitex[audio]
# Install multiple: pip install scitex[audio,scholar,stats]
# Install all: pip install scitex[all]

[project.optional-dependencies]

# --------------------------------------------
# Module-Specific Dependencies
# Each module can be installed independently
# --------------------------------------------

# AI Module - LLM APIs and ML tools
# Use: pip install scitex[ai]
ai = [
    "openai",
    "anthropic",
    "google-genai",
    "groq",
    "scikit-learn",
    "optuna",
    "joblib",
    "seaborn",
    "scipy",
    "matplotlib",
]

# Audio Module - Text-to-Speech
# Use: pip install scitex[audio]
audio = [
    "pyttsx3",
    "gTTS",
    "pydub",
    "elevenlabs",
    "mcp",
]

# Benchmark Module - Performance monitoring
# Use: pip install scitex[benchmark]
benchmark = [
    "psutil",
]

# Browser Module - Web automation
# Use: pip install scitex[browser]
browser = [
    "playwright>=1.40.0",
    "aiohttp",
]

# Capture Module - Screenshot capture
# Use: pip install scitex[capture]
capture = [
    "mss",
    "Pillow",
    "playwright>=1.40.0",
    "mcp",
]

# CLI Module - Command line interface
# Use: pip install scitex[cli]
cli = [
    "click",
    "requests",
]

# DB Module - Database operations
# Use: pip install scitex[db]
db = [
    "sqlalchemy",
    "psycopg2-binary",
]

# Decorators Module - Caching and utilities
# Use: pip install scitex[decorators]
decorators = [
    "joblib",
]

# DSP Module - Digital Signal Processing
# Use: pip install scitex[dsp]
dsp = [
    "scipy",
    "sounddevice",
    "matplotlib",
]

# FTS Module - Figures, Tables, Statistics
# Use: pip install scitex[fts]
fts = [
    "matplotlib",
    "Pillow",
    "flask",
]

# Gen Module - General utilities
# Use: pip install scitex[gen]
gen = [
    "ipython",
    "h5py",
    "pyperclip",
    "readchar",
    "scipy",
    "matplotlib",
    "xarray",
]

# Git Module - Git operations
# Use: pip install scitex[git]
git = [
    "GitPython",
    "matplotlib",
]

# IO Module - File I/O operations
# Use: pip install scitex[io]
io = [
    "h5py",
    "openpyxl",
    "xlrd",
    "ruamel.yaml",
    "lxml",
    "lxml_html_clean",
    "xarray",
    "zarr",
    "numcodecs",
    "Pillow",
    "piexif",
    "pypdf",
    "qrcode[pil]",
    "PyPDF2",
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "html2text",
    "markdown",
    "joblib",
    "plotly",
    "pymatreader",
    "natsort",
    "GitPython",
    "scipy",
    "matplotlib",
]

# Linalg Module - Linear algebra
# Use: pip install scitex[linalg]
linalg = [
    "scipy",
    "sympy",
    "geom_median",
    "matplotlib",
]

# MSWord Module - MS Word document handling
# Use: pip install scitex[msword]
msword = [
    "python-docx",
    "pypandoc",
]

# NN Module - Neural Networks
# Use: pip install scitex[nn]
nn = [
    "torch",
    "torchaudio",
    "torchsummary",
    "julius",
    "seaborn",
    "ipdb",
    "matplotlib",
]

# Path Module - Path utilities
# Use: pip install scitex[path]
path = [
    "GitPython",
    "matplotlib",
]

# PLT Module - Plotting utilities
# Use: pip install scitex[plt]
plt = [
    "matplotlib",
    "seaborn",
    "Pillow",
    "piexif",
    "termplotlib",
    "scipy",
    "xarray",
]

# Repro Module - Reproducibility tools
# Use: pip install scitex[repro]
repro = [
    "torch",
    "matplotlib",
]

# Resource Module - Resource monitoring
# Use: pip install scitex[resource]
resource = [
    "psutil",
    "matplotlib",
]

# Scholar Module - Paper management & browser
# Use: pip install scitex[scholar]
scholar = [
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    "html2text",
    "crawl4ai",
    "scholarly",
    "pymed",
    "python-docx",
    "PyPDF2",
    "pdfplumber",
    "PyMuPDF",
    "pytesseract",
    "bibtexparser",
    "playwright>=1.40.0",
    "feedparser",
    "httpx",
    "tenacity",
    "pydantic",
    "watchdog",
    "natsort",
    "aiohttp",
    "openpyxl",
    "sqlalchemy",
    "nest-asyncio",
    "seaborn",
    "scikit-learn",
    "Pillow",
    "requests",
    "matplotlib",
]

# Stats Module - Statistical analysis
# Use: pip install scitex[stats]
stats = [
    "scipy",
    "statsmodels",
    "matplotlib",
]

# Str Module - String utilities
# Use: pip install scitex[str]
str = [
    "natsort",
    "matplotlib",
    "xarray",
]

# Torch Module - PyTorch support
# Use: pip install scitex[torch]
torch = [
    "torch",
]

# Types Module - Type utilities
# Use: pip install scitex[types]
types = [
    "torch",
    "xarray",
]

# Utils Module - General utilities
# Use: pip install scitex[utils]
utils = [
    "h5py",
    "natsort",
    "matplotlib",
    "xarray",
]

# Web Module - Web utilities
# Use: pip install scitex[web]
web = [
    "aiohttp",
    "beautifulsoup4",
    "readability-lxml",
    "requests",
    "Pillow",
    "matplotlib",
]

# Writer Module - Academic paper writing
# Use: pip install scitex[writer]
writer = [
    "yq",
    "xlsx2csv",
    "csv2latex",
    "matplotlib",
]

# Figures Module - Reproducible figure creation
# Use: pip install scitex[figures]
figures = [
    "figrecipe",
]

# --------------------------------------------
# Convenience Groups (combinations of modules)
# --------------------------------------------

# Scientific computing essentials
# Use: pip install scitex[science]
science = [
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "statsmodels",
    "h5py",
    "xarray",
    "Pillow",
]

# Deep Learning (Heavy - 2-4 GB)
# Use: pip install scitex[dl]
dl = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchsummary",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "fairscale",
    "pytorch_pretrained_vit",
    "pytorch-optimizer",
    "einops",
]

# Machine Learning extras
# Use: pip install scitex[ml]
ml = [
    "scikit-learn",
    "scikit-image",
    "imbalanced-learn",
    "umap-learn",
    "sktime",
    "catboost",
    "optuna",
    "sympy",
    "opencv-python",
]

# Jupyter & Interactive Development
# Use: pip install scitex[jupyter]
jupyter = [
    "jupyterlab",
    "jupyter-collaboration",
    "ipykernel",
    "ipdb",
    "papermill",
    "jupytext",
    "nbsphinx",
    "ipython",
]

# Neuroscience tools
# Use: pip install scitex[neuro]
neuro = [
    "mne",
    "obspy",
    "pyedflib",
    "pybids",
    "tensorpac",
    "ripple_detection",
    "geom_median",
]

# Web Frameworks
# Use: pip install scitex[webdev]
webdev = [
    "fastapi",
    "flask",
    "streamlit",
    "celery",
]

# GUI Editors
# Use: pip install scitex[gui]
gui = [
    "flask",
    "dearpygui",
    "PyQt6",
]

# Development Tools
# Use: pip install scitex[dev]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-mock",
    "pytest-env",
    "pytest-asyncio",
    "pytest-testmon",
    "pytest-json-report",
    # Code Quality
    "ruff",
    "mypy",
    "pre-commit",
    "pyright",
    "python-lsp-server",
    "jedi",
    "rope",
    # Profiling
    "line-profiler",
    "memory-profiler",
    # Documentation
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "markdown",
    "markdown2",
    "pygments",
    # Build
    "build",
    "twine",
    "wheel",
    "setuptools",
    # Type Hints
    "types-requests",
    "types-PyYAML",
    "types-setuptools",
]

# All features (everything except dev)
# Use: pip install scitex[all]
all = [
    # science
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "statsmodels",
    "h5py",
    "xarray",
    "Pillow",
    # io
    "openpyxl",
    "xlrd",
    "ruamel.yaml",
    "lxml",
    "lxml_html_clean",
    "zarr",
    "numcodecs",
    "piexif",
    "pypdf",
    "qrcode[pil]",
    "PyPDF2",
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "html2text",
    "markdown",
    "joblib",
    "pymatreader",
    "natsort",
    "GitPython",
    # ai
    "openai",
    "anthropic",
    "google-genai",
    "groq",
    "optuna",
    # audio
    "pyttsx3",
    "gTTS",
    "pydub",
    "elevenlabs",
    "mcp",
    # browser/capture
    "playwright>=1.40.0",
    "aiohttp",
    "mss",
    # cli
    "click",
    "requests",
    # db
    "sqlalchemy",
    "psycopg2-binary",
    # dsp
    "sounddevice",
    # gen
    "ipython",
    "pyperclip",
    "readchar",
    # linalg
    "sympy",
    "geom_median",
    # msword
    "pypandoc",
    # nn/dl
    "torch",
    "torchvision",
    "torchaudio",
    "torchsummary",
    "julius",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "fairscale",
    "pytorch_pretrained_vit",
    "pytorch-optimizer",
    "einops",
    # plt
    "termplotlib",
    # resource
    "psutil",
    # scholar
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    "crawl4ai",
    "scholarly",
    "pymed",
    "pytesseract",
    "bibtexparser",
    "feedparser",
    "httpx",
    "tenacity",
    "pydantic",
    "watchdog",
    "nest-asyncio",
    # web
    "readability-lxml",
    # writer
    "yq",
    "xlsx2csv",
    "csv2latex",
    # ml
    "scikit-image",
    "imbalanced-learn",
    "umap-learn",
    "sktime",
    "catboost",
    "opencv-python",
    # neuro
    "mne",
    "obspy",
    "pyedflib",
    "pybids",
    "tensorpac",
    "ripple_detection",
    # figures
    "figrecipe",
    # jupyter
    "jupyterlab",
    "jupyter-collaboration",
    "ipykernel",
    "ipdb",
    "papermill",
    "jupytext",
    "nbsphinx",
    # webdev
    "fastapi",
    "flask",
    "streamlit",
    "celery",
    # gui
    "dearpygui",
    "PyQt6",
]

# ============================================
# Tool Configurations
# ============================================

[tool.hatch.version]
path = "src/scitex/__version__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = ".pytest_cache"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-p", "no:warnings",
    "--ignore=tests/custom/old/",
    "--import-mode=importlib",
    "--timeout=60",
]
timeout_method = "signal"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmark tests",
    "filterwarnings: marks tests to filter specific warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/scitex"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.old/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/setup.py",
    "*/__main__.py",
    "*/versioneer.py",
    "*/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if __name__ == .__main__.",
    "pass",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "warnings.warn",
    "logger.debug",
    "logger.info",
]

[tool.coverage.paths]
source = [
    "src/scitex",
    "*/site-packages/scitex",
]

[tool.coverage.html]
directory = "htmlcov"
title = "SciTeX Coverage Report"
skip_covered = false
skip_empty = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["scitex"]
known_third_party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/.old/*", "*/migrations/*", "*/__pycache__/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503", "E731", "E402"]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".tox",
    ".coverage",
    ".coveragerc",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:F401,F403,F811",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

# ============================================
# Ruff Configuration
# ============================================

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".old*",
    "migrations",
    "htmlcov",
    "docs/to_claude",
    "src/scitex/scholar/docs",
    "examples/*/docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # whitespace before ':'
    "E266",   # too many leading '#' for block comment
    "E501",   # line too long (handled by formatter)
    "E731",   # do not assign a lambda expression
    "E402",   # module level import not at top of file
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["scitex"]
known-third-party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"